# AnimeFinderFlutter

./: .gitignore  .gitmodules  README.md  README_EN.md
scripts/: build_android.ps1  build_macos_android.sh  build_windows.ps1
src/: pubspec.yaml
src/anime_finder/: flutter_01.sksl.json  gen_tr_getter.py  local.properties  pubspec.yaml
src/anime_finder/android/app/: CMakeLists.txt  build.gradle
src/anime_finder/android/app/src/main/: AndroidManifest.xml
src/anime_finder/android/app/src/main/res/values-night-v31/: styles.xml
src/anime_finder/android/app/src/profile/: AndroidManifest.xml
src/anime_finder/assets/: translation.json
src/anime_finder/ios/Flutter/: Generated 3.xcconfig  Generated 4.xcconfig  flutter_export_environment 2.sh  flutter_export_environment 3.sh
src/anime_finder/ios/Runner/: Info.plist
src/anime_finder/ios/Runner.xcodeproj/: project.pbxproj
src/anime_finder/lib/: main.dart
src/anime_finder/lib/pages/: comic_reader.dart  downloads.dart  downloads_table.dart  file_manager.dart  home.dart  music_player.dart  nav.dart  search_history.dart  search_result.dart  settings.dart  video_player.dart  watch_history.dart
src/anime_finder/lib/service/: anime.dart  anime_providers.dart  file.dart  libtorrent.dart  libtorrent_wrapper.dart  open_file.dart  platform.dart  qbittorrent.dart  search_history.dart  settings.dart  storage.dart  translation.dart  translation.g.dart  watch_history.dart  watch_history.g.dart
src/anime_finder/lib/theme/: lib_color_schemes.g.dart  style.dart  text_theme.dart  theme.dart
src/anime_finder/lib/utils/: animated_route.dart  callback.dart  duration.dart  file_types.dart  platform.dart  show_toast.dart  string.dart  units.dart
src/anime_finder/lib/widgets/: af_animated_list.dart  af_dropdown.dart  af_page.dart  afpage.dart  anime_card.dart  anime_list.dart  downloads_table.dart  file_list.dart  file_manager.dart  future_text.dart  play_pause_button.dart  search_bar.dart  search_history_listview.dart  setting_item.dart  slidable_actions.dart  visibility_listenable_builder.dart
src/anime_finder/linux/: CMakeLists.txt
src/anime_finder/macos/Runner/: Info.plist
src/anime_finder/macos/Runner.xcodeproj/: project.pbxproj
src/anime_finder/macos/Runner/Configs/: AppInfo.xcconfig
src/anime_finder/windows/runner/: Runner.rc
src/lib/: main.dart
src/lib/pages/: downloads.dart  home.dart  nav.dart  search.dart  settings.dart
src/lib/service/: anime.dart  anime_provider.dart  qbittorrent.dart  search_history.dart  settings.dart
src/lib/theme/: style.dart  text_theme.dart
src/lib/widgets/: afpage.dart  anime_card.dart  anime_list.dart  search_history_listview.dart  setting_item.dart
src/libtorrent/: .gitignore  CMakeLists.txt  ios.cmake  macos.cmake
src/libtorrent/cmake/ios/: CMakeLists.txt  ios_toolchain.cmake
src/libtorrent/cmake/macos/: CMakeLists.txt
src/libtorrent/include/: libtorrent.h
src/libtorrent/src/: libtorrent.cpp
src/libtorrent/src/boost_1_79_0/: b2 2  build_universal.sh  project-config 2.jam
src/libtorrent/src/libtorrent-rasterbar-2.0.6/: build_macos.sh  project-config.jam
src/libtorrent/src/openssl-openssl-3.0.3/: build_universal.sh
src/libtorrent/test/dart_test/: pubspec.yaml
src/libtorrent/test/dart_test/lib/: libtorrent.g.dart  (+1 more)
src/libtorrent/test/simple_c_test/: .gitignore  CMakeLists.txt  simple_test.c
src/web/: index.html
src/windows/runner/: main.cpp
(+3 files in other folders)
